--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,13 +1,18 @@
-<h1>Lista de Posts: </h1>
 
-{{#each posts}}
+<br><div><a href="/cad"><button>Cadastrar</button></a></div><br><br>
+<h1>Lista de Veículos: </h1>
+
+{{#each veiculos}}
     <h1>Id:{{id}}</h1>
-    <h2>Titulo:{{this.titulo}}</h2>
-    <p>Conteúdo:{{this.conteudo}}</p>
-    <p>Data:{{createdAt}}</p>
+    <h2>Marca:{{this.marca}}</h2>
+    <h2>Modelo:{{this.modelo}}</h2>
+    <h2>Ano de Fabricação:{{this.anoFabricacao}}</h2>
+    <h2>Placa:{{this.placa}}</h2>
     <a href="/deletar/{{id}}"><button>Deletar</button>  </a>
     <a href="/alterar/{{id}}"><button>Alterar</button>  </a>
     <hr>
 {{/each}}
+
+
         
 {{! Path: views/formulario.handlebars }}
