--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/public/bootstrap.min.css">
-    <title>Postagens</title>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initialscale=1.0">
+<!-- acrescente os links abaixo dos css ele já vai entender que
+está na pasta public -->
+<link href="/public/css/bootstrap/bootstrap.min.css" rel="stylesheet">
+<title>Veículos</title>
 </head>
-
 <body>
-    <div class="container">
+<div class="container mt-4">
 
-        {{{body}}}
-
-    </div>
+{{{body}}}
+</div>
 </body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-
+alpha3/dist/js/bootstrap.bundle.min.js"
+integrity="sha384-
+ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+crossorigin="anonymous"></script>
 </html>
