Adiciona estilo de fundo azul claro à página inicial

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,11 @@
 está na pasta public -->
 <link href="/public/css/bootstrap/bootstrap.min.css" rel="stylesheet">
 <title>Veículos</title>
+<style>
+body {
+    background-color: lightblue;
+}
+</style>
 </head>
 <body>
 <div class="container mt-4">
